--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<div style="text-align:center">
-    <h1>
-        Welcome to {{ title }}!
-    </h1>
+<div class='app__container'>
+	<router-outlet></router-outlet>
 </div>
-
-<router-outlet></router-outlet>
