--- a/src/app/components/list-posts/list-posts.component.html
+++ b/src/app/components/list-posts/list-posts.component.html
@@ -1,8 +1,50 @@
-<mat-card class="list-posts">
-	<ul class="list-posts__list">
-		<a class="list-posts__item" *ngFor="let post of posts">
-			<span class="list-posts__item__title"> {{post.title}} </span> 
-			<span class="list-posts__item__author"> User {{post.userId}} </span>
-		</a>
-	</ul>
-</mat-card>
+<div class="list-posts mat-elevation-z8">
+
+	<mat-form-field class="list-posts__filter">
+  		<input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+	</mat-form-field>
+
+  	<table mat-table matSort [dataSource]="dataSource">
+	    
+	    <ng-container matColumnDef="id">
+	    	<th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+	    	<td mat-cell *matCellDef="let element">
+	    		<a class="list-posts__item">
+	    			{{element.id}}
+	    		</a>
+	    	</td>
+	    </ng-container>
+
+	    <ng-container matColumnDef="title">
+	    	<th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
+	    	<td mat-cell *matCellDef="let element">
+	    		<a class="list-posts__item">
+	    			{{element.title}}
+	    		</a>
+	    	</td>
+	    </ng-container>
+
+	    <ng-container matColumnDef="userId">
+	      	<th mat-header-cell *matHeaderCellDef mat-sort-header> User </th>
+	      	<td mat-cell *matCellDef="let element">
+	      		<a class="list-posts__item">
+	      			{{element.userId}}
+	      		</a>
+	      	</td>
+	    </ng-container>
+
+	    <ng-container matColumnDef="body">
+	      	<th mat-header-cell *matHeaderCellDef mat-sort-header> Content </th>
+	      	<td mat-cell *matCellDef="let element">
+	      		<a class="list-posts__item">
+	      			{{element.body}}
+	      		</a>
+	      	</td>
+	    </ng-container>
+
+    	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    	<tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectRow(row)"></tr>
+  	</table>
+
+  	<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+</div>
